--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /boot_gradle_security/bin/main/application.yml
 /boot_gradle_security/src/main/resources/application.yml
 copyCmd
-
+/boot_gradle_security/bin/
