--- a/boot_gradle_security/src/main/resources/application_temp.yml
+++ b/boot_gradle_security/src/main/resources/application_temp.yml
@@ -5,16 +5,16 @@ spring:
     suffix: .jsp
   
   datasource:
-   driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-   url: jdbc:sqlserver://192.168.0.31:1433;instanceName=BSHOP_DATA
-   username: id
-   password: pw
-   
+   # driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+   driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+   # url: jdbc:sqlserver://192.168.0.1:1433;instanceName=instanceName
+   url: jdbc:log4jdbc:sqlserver://192.168.0.1:1433;instanceName=instanceName
+   username: username
+   password: password
+  
 # jsp파일 reload할때마다 재부팅해야되서 해당설정 추가해주었음.  
 server:
  servlet:
   jsp:
    init-parameters:
     development: true
-
-   
