다음주에 에러출력메시지 config로 공통관리 및 mapper의 *_sql.xml설정 location설정 다시 잡아주자..

--- a/boot_gradle_security/bin/main/application.yml
+++ b/boot_gradle_security/bin/main/application.yml
@@ -18,3 +18,8 @@ server:
   jsp:
    init-parameters:
     development: true
+   
+#mybatis 설정..
+#mybatis:
+#  mapper-locations: classpath:/mapper/**/*_SQL.xml
+    
