흠..mapper-location설정을 변경해주었는데도 BindingException이 발생한다..

--- a/boot_gradle_security/bin/main/application.yml
+++ b/boot_gradle_security/bin/main/application.yml
@@ -19,7 +19,6 @@ server:
    init-parameters:
     development: true
    
-#mybatis 설정..
-#mybatis:
-#  mapper-locations: classpath:/mapper/**/*_SQL.xml
-    
+# mybatis 설정..
+mybatis:
+  mapper-locations: classpath:/mybatis/mapper/*.xml
