DB명칭 변경 및 yml에 mybatis설정 추가함.

--- a/boot_gradle_security/src/main/resources/application_temp.yml
+++ b/boot_gradle_security/src/main/resources/application_temp.yml
@@ -18,3 +18,7 @@ server:
   jsp:
    init-parameters:
     development: true
+    
+# mybatis 설정.
+mybatis:
+  mapper-locations: classpath:/mybatis/mapper/*.xml
