--- a/boot_gradle_security/build.gradle
+++ b/boot_gradle_security/build.gradle
@@ -55,6 +55,10 @@ dependencies {
 	// Xml -> Json
 	compile group: 'org.json', name: 'json', version: '20190722'
 	
+	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+	// for String -> Json
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	
 }
 
 
